@@ -104,7 +104,7 @@ public class BasicEconomyTest {
         Currency currency = service.currencies().primary();
         Account account = service.account(currency, target).join();
 
-        assertEquals(currency.defaultAccountBalance(), balance = account.balanceAsync().join());
+        assertEquals(currency.defaultAccountBalance(), balance = account.balance());
         assertTrue(Files.exists(Paths.get("config")
                 .resolve("impactor")
                 .resolve("economy")
@@ -131,16 +131,16 @@ public class BasicEconomyTest {
         Currency currency = service.currencies().primary();
         Account account = service.account(currency, target).join();
 
-        assertEquals(balance, account.balanceAsync().join());
+        assertEquals(balance, account.balance());
         BigDecimal adjustment = BigDecimal.valueOf(250);
-        EconomyTransaction transaction = account.depositAsync(adjustment).join();
+        EconomyTransaction transaction = account.deposit(adjustment);
 
         assertEquals(EconomyResultType.SUCCESS, transaction.result());
         assertEquals(EconomyTransactionType.DEPOSIT, transaction.type());
-        assertEquals(balance.add(adjustment), balance = account.balanceAsync().join());
+        assertEquals(balance.add(adjustment), balance = account.balance());
 
         account = service.account(currency, target).join();
-        assertEquals(balance, account.balanceAsync().join());
+        assertEquals(balance, account.balance());
     }
 
     @Test
@@ -167,17 +167,17 @@ public class BasicEconomyTest {
         BigDecimal adjustment = BigDecimal.ZERO;
         Collection<Account> accounts = service.accounts(currency).join();
         for(Account account : accounts) {
-            account.resetAsync().join();
+            account.reset();
 
-            account.depositAsync(adjustment).join();
+            account.deposit(adjustment);
             adjustment = adjustment.add(BigDecimal.valueOf(250));
         }
 
         List<Account> sorted = accounts.stream()
-                .sorted(Comparator.<Account, BigDecimal>comparing(account -> account.balanceAsync().join()).reversed())
-                .collect(Collectors.toList());
+                .sorted(Comparator.<Account, BigDecimal>comparing(Account::balance).reversed())
+                .toList();
 
-        assertEquals(BigDecimal.valueOf(1000.0), sorted.get(0).balanceAsync().join());
+        assertEquals(BigDecimal.valueOf(1000.0), sorted.get(0).balance());
     }
 
     @Test
@@ -194,7 +194,7 @@ public class BasicEconomyTest {
         Currency currency = service.currencies().primary();
         Account account = service.account(currency, target).join();
 
-        account.withdrawAsync(new BigDecimal(300)).join();
+        account.withdraw(new BigDecimal(300));
         assertTrue(flag.get());
     }
 
@@ -222,6 +222,13 @@ public class BasicEconomyTest {
 
         condensed = currency.format(amount, true, Locale.CANADA_FRENCH);
         assertEquals("$17,38", PlainTextComponentSerializer.plainText().serialize(condensed));
+
+        BigDecimal large = BigDecimal.valueOf(100_540_233);
+        condensed = currency.format(large, Locale.US);
+        assertEquals("$100,540,233.00", PlainTextComponentSerializer.plainText().serialize(condensed));
+
+        condensed = currency.format(large, Locale.ITALIAN);
+        assertEquals("$100.540.233,00", PlainTextComponentSerializer.plainText().serialize(condensed));
     }
 
     @Test
@@ -231,7 +238,7 @@ public class BasicEconomyTest {
         Currency currency = service.currencies().primary();
 
         Account account = service.account(currency, target).join();
-        EconomyTransaction set = account.setAsync(BigDecimal.ONE).join();
+        EconomyTransaction set = account.set(BigDecimal.ONE);
         assertTrue(set.successful());
         BigDecimal amount = new BigDecimal("1.00");
 
@@ -242,11 +249,10 @@ public class BasicEconomyTest {
                 .message(EconomyResultType.SUCCESS, Component.text("Transaction succeeded!"))
                 .message(EconomyResultType.NOT_ENOUGH_FUNDS, Component.text("Account did not have enough funds..."))
                 .message(EconomyResultType.FAILED, Component.text("A failure occurred while processing this transaction"))
-                .send()
-                .join();
+                .build();
 
         assertTrue(transaction.successful());
-        assertEquals(0, account.balanceAsync().join().intValue());
+        assertEquals(0, account.balance().intValue());
 
         AtomicReference<Component> message = new AtomicReference<>(Component.empty());
         Audience audience = new Audience() {
@@ -265,8 +271,7 @@ public class BasicEconomyTest {
                 .to(account)
                 .amount(new BigDecimal(250))
                 .message(EconomyResultType.SUCCESS, Component.text("Transaction completed!"))
-                .send()
-                .join();
+                .build();
 
         transfer.inform(audience);
         assertEquals("Transaction completed!", PlainTextComponentSerializer.plainText().serialize(message.get()));
